Versão atualizada e estavel do projeto, 95% pronto

--- a/src/app/feed-list/feed-list.component.css
+++ b/src/app/feed-list/feed-list.component.css
@@ -199,7 +199,9 @@ p{
 
 #conquistasTitulo{
     font-size: 120%;
-    margin-top: 5%;
+    margin-top: 7%;
+    font-family: 'Cabin', sans-serif;
+
 }
 
 
