--- a/src/app/feed-list/feed-list.component.html
+++ b/src/app/feed-list/feed-list.component.html
@@ -85,8 +85,7 @@
                     <img src="../../assets/image/teatro..jpg" alt="" width="30" height="30"
                         title="Este(a) Usuario(a) ja visitou o teatro">
                 </div>
-                <p class="card-text">Voce Ja visitou esses eventos Parabens, Click em "Ver mais" para aumentar sua taxa
-                    de "cultura".</p>
+                <p class="card-text mt-3">Click em "Ver mais" para acessar a galeria de troféus.</p>
                 <div class="btn-toolbar justify-content-end">
                     <div class="btn-group">
                         <button href="#" class=" btn btn-outline-purple" id="btnVMais"  [routerLink]="'/trofeus'">Ver Mais</button>
