--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,6 +21,9 @@
       <li class="nav-item">
         <a class="nav-link" style="color:white" [routerLink]="'/ajuda'">Ajuda</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" style="color:white" [routerLink]="'/'" (click) = "logout()">Sair</a>
+      </li>
     </ul>
   </div>
 </nav>
